[package]
name = "zerosync_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claims = { path = "../sandstorm-mirror/claims", package = "sandstorm-claims" }
layouts = { path = "../sandstorm-mirror/layouts", package = "sandstorm-layouts" }
binary = { path = "../sandstorm-mirror/binary", package = "sandstorm-binary" }
ministark = { path = "../ministark-mirror", package = "ministark" }
ark-ff = "0.4"
ark-serialize = "0.4"
serde_json = "1.0"
wasm-bindgen = "0.2.74"
serde = { version = "1.0.136", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.57"
getrandom = { version = "0.2", features = ["js"] }
num-bigint = { version = "0.4" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false